dist/ffi/include/sekejap.h

// An open database. Created by `sekejap_open`,
// `sekejap_open_with_config` or `sekejap_open_service`; destroyed by
// `sekejap_close`. `Send + Sync`: it MAY be shared across threads.
typedef struct SekejapDb SekejapDb;
// REFUSED: sekejap is disk-first and has no in-memory database. Always
// `NULL`, with the reason in `sekejap_last_error` and
// `SekejapStatus_Refused` in `sekejap_last_error_code`.
//
// A temporary directory would be a fake of an ephemeral store, so this does
// not make one. Give `sekejap_open` a directory.
SekejapDb *sekejap_open_memory(void);
// REFUSED: there is nothing proportional to rows held in memory to trim.
// Always `-1`, with the reason in `sekejap_last_error`.
//
// The caches sekejap keeps are bounded at open -- the buffer pool by
// `budget_bytes`, the plan cache by its three ceilings -- so a trim call
// would have nothing to give back, and a no-op that returned success would
// be a fake of reclaim.
//
// # Safety
// `db` may be NULL; when it is not, it must be a live handle.
int32_t sekejap_trim_memory(SekejapDb *db);
// REFUSED: there is no payload-rewriting compaction. Always `-1`.
// `sekejap_checkpoint` folds the committed write-ahead log into the data
// file; it does not rewrite rows, and naming that `compact` would promise
// something else.
//
// # Safety
// `db` may be NULL; when it is not, it must be a live handle.
int32_t sekejap_compact(SekejapDb *db);
// REFUSED: the `SHOW` family is not in this dialect. Always `NULL`.
// `sekejap_collections` and `sekejap_describe` answer the same
// questions as DATA rather than as a result set.
//
// # Safety
// `db` may be NULL; `statement` may be NULL.
char *sekejap_show(SekejapDb *db, const char *statement);