dist/bindings/wrappers/csharp/Sekejap/Native.cs


        // ---- REFUSED by name (kept 1:1 so the wrapper never fakes a memory
        //      store, a memory trim, a payload-rewriting compact or SHOW) --------------

        [DllImport(Lib)] internal static extern IntPtr sekejap_open_memory();

        [DllImport(Lib)] internal static extern int sekejap_trim_memory(IntPtr db);

        [DllImport(Lib)] internal static extern int sekejap_compact(IntPtr db);

        [DllImport(Lib)] internal static extern IntPtr sekejap_show(
            IntPtr db,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string? statement);
    }
}
